--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^2.8.0",
     "next": "12.1.5",
+    "next-sanity": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
